<?xml version="1.0"?>
<package format="3">
  <name>global_path_deformer</name>
  <version>0.0.1</version>
  <description>Realtime occupancy-grid based local deformation of global path</description>

  <maintainer email="yeblee02@gmail.com">yebin lee</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
